create cartControllers.js and userControllers.js update user delete function

--- a/SupermarketAppMVC/views/cart.ejs
+++ b/SupermarketAppMVC/views/cart.ejs
@@ -36,32 +36,28 @@
     <% } else { %>
       <table class="table table-bordered">
         <thead>
-          <tr>
-            <th>Product</th>
-            <th>Price</th>
-            <th>Quantity</th>
-            <th>Total</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% let total = 0; %>
-          <% for (let i = 0; i < cart.length; i++) { %>
-            <tr>
-                <td><%= cart[i].productName %></td>
-                <td><img src="/images/<%= cart[i].image %>" width="80" class="img-thumbnail"></td>
-                <td><%= cart[i].quantity %></td>
-                <td>$<%= (cart[i].price * cart[i].quantity).toFixed(2) %></td>
-            </tr>
-            <% total += cart[i].price * cart[i].quantity; %>
-          <% }; %>
-        </tbody>
-      </table>
-      <h4>Total: $<%= total.toFixed(2) %></h4>
-
-      <div class="mt-4">
-        <a href="/shopping" class="btn btn-secondary">Back to Shopping</a>
-      </div>
-    <% } %>
-  </div>
-</body>
-</html>
+  <tr>
+    <th>Product</th>
+    <th>Image</th>
+    <th>Quantity</th>
+    <th>Total</th>
+    <th>Action</th>
+  </tr>
+</thead>
+<tbody>
+  <% let total = 0; %>
+  <% for (let i = 0; i < cart.length; i++) { %>
+    <tr>
+      <td><%= cart[i].productName %></td>
+      <td><img src="/images/<%= cart[i].image %>" width="80" class="img-thumbnail"></td>
+      <td><%= cart[i].quantity %></td>
+      <td>$<%= (cart[i].price * cart[i].quantity).toFixed(2) %></td>
+      <td>
+        <form action="/cart/delete/<%= cart[i].productId %>" method="POST" style="display:inline;">
+          <button type="submit" class="btn btn-danger btn-sm">Remove</button>
+        </form>
+      </td>
+    </tr>
+    <% total += cart[i].price * cart[i].quantity; %>
+  <% } }%>
+</tbody>
